--- a/client/src/app/scoreboard/scoreboard.component.html
+++ b/client/src/app/scoreboard/scoreboard.component.html
@@ -41,7 +41,7 @@
     Family scores are calculated as the quadratic mean of all scoring players in
     a family plus a slight bonus for larger family size. <br />
     A family must have at least 3 scoring players to get a family score. <br />
-    To be a scoring player, a player must at least 1 point.
+    To be a scoring player, a player must at have least 1 point.
   </div>
 </div>
 <h3 *ngIf="userCount">Total Players: {{ userCount }}</h3>
