Fixed Sentry-FGC-5 GET /api/auth/me throwing expected exception.
fixed #54

--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -6,6 +6,10 @@
   ></div>
 </div>
 
+<div *ngIf="serverError" class="alert alert-danger">
+  Something seems to have gone wrong. We're working on it.
+</div>
+
 <ng-template #state>
   <div *ngIf="isStateUnknown()">
     <p class="fade-in-0"><b>Welcome to Fantasy General Conference.</b></p>
