Fixed #52, the dialog to change your last name disables april 4th near midnight

--- a/client/src/app/nav-header/nav-header.component.html
+++ b/client/src/app/nav-header/nav-header.component.html
@@ -78,6 +78,7 @@
           class="form-control"
           id="family"
           name="family"
+          [disabled]="disableFamily()"
           [(ngModel)]="family"
           autocomplete="off"
           [ngbTypeahead]="searchFamilies"
