#52 added date check, now we need server/client config

--- a/client/src/app/nav-header/nav-header.component.html
+++ b/client/src/app/nav-header/nav-header.component.html
@@ -72,6 +72,10 @@
       </div>
 
       <div class="form-group">
+        <div ng-if="isAdmin() || true">
+          <label for="switch">Enable Family?</label>
+          <input type="checkbox" (change)="toggleFamilyChangeEnabled()" />
+        </div>
         <label for="family">My Family Name (Team Name)</label>
         <input
           type="search"
