--- a/client/src/app/nav-header/nav-header.component.html
+++ b/client/src/app/nav-header/nav-header.component.html
@@ -1,9 +1,3 @@
-<div class="left-side">
-  <a (click)="openAbout(aboutContent)">
-    <img src="assets/slt.png" height="54" width="46" />
-  </a>
-</div>
-
 <marquee behavior="scroll" direction="left">Fantasy General Conference</marquee>
 
 <div class="right-side">
@@ -14,7 +8,7 @@
 
 <ng-template #aboutContent let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">About</h4>
+    <h4 class="modal-title" id="modal-basic-title">About FantasyGC.org</h4>
     <button
       type="button"
       class="close"
@@ -26,9 +20,24 @@
   </div>
   <div class="modal-body">
     <div class="text-left">
-      <p>I created FGC for some fun</p>
-      <p>copywright Bryce Fisher all rights reserved</p>
-      <p>If I break your computer, boo</p>
+      <p>
+        FantasyGC.org is an game loosely based on various fantasy sports.
+        FantasyGC.org is not affiliated with the Church of Jesus Christ of
+        Latter-day Saints. The goal of FantasyGC.org is to provide a fun,
+        slightly competitive learning experience for members while watching the
+        General Conference of the Church of Jesus Christ of Latter-day Saints.
+      </p>
+      <p>
+        FantasyGC.org is distributed in the hope that it will be useful, but
+        WITHOUT ANY WARRANTY; without even the implied warranty of
+        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+        <a href="https://www.gnu.org/licenses/">GNU General Public License</a>
+        for more details.
+      </p>
+      <p>
+        Written and maintained by Bryce J. Fisher and a wonderful development
+        team. Copyright &copy; 2018-2020 Bryce J. Fisher
+      </p>
     </div>
   </div>
 </ng-template>
@@ -94,6 +103,13 @@
     </form>
   </div>
   <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-outline-dark"
+      (click)="openAbout(aboutContent)"
+    >
+      About FantasyGC
+    </button>
     <button type="button" class="btn btn-outline-dark" (click)="logout(modal)">
       Switch Users
     </button>
