Adding Caching to Workflow.

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -23,8 +23,8 @@
         <div class="input-group-append">
           <button
             type="button"
-            class="btn  btn-outline-secondary"
-            (click)="updateFamilyName(newName.value, family)"
+            class="btn btn-outline-secondary"
+            (click)="updateFamilyName(family.name, family)"
           >
             Update
           </button>
