--- a/client/src/app/welcome/welcome.component.scss
+++ b/client/src/app/welcome/welcome.component.scss
@@ -51,4 +51,13 @@
       color: #b0b0b0;
     }
   }
+
+  .family-group {
+    display: flex;
+    flex-direction: column;
+  }
+  .family-row {
+    display: flex;
+    flex-direction: row;
+  }
 }
