ignore package lock, yarn complains
check for whitespace in name/family

Added familyGrouping

I could not get the authServide to sort it or return it, but it builds it
So I added some mock data.  Maybe bryce can butter it up

Also, added additional sql to flyway into the DB

Also, do not allow family/name to have spaces

Added conole.log on sentry error, aligned welcome groups better

--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -41,19 +41,25 @@
       *ngIf="authService.getUsers()?.length"
       class="fade-in-1 selectable-users"
     >
-      <div *ngFor="let user of authService.getUsers()" class="user">
-        <a (click)="login(user)">
-          <app-image
-            [target]="
-              user?.hasProfileImage
-                ? '/api/user/profile/' + user.id
-                : '/assets/profile.png'
-            "
-            imgStyle="width: 50px; border-radius: 5px;"
-          ></app-image>
-          <div class="user-name">{{ user?.name }}</div>
-          <div class="family-name">{{ user?.family?.name }}</div>
-        </a>
+      <div>
+        <li *ngFor="let userGroup of userGroups" class="family-group">
+          <div>
+            {{ userGroup.familyName }}
+          </div>
+          <div class="family-row">
+            <div *ngFor="let user of userGroup.users">
+              <app-image
+                [target]="
+                  user?.hasProfileImage
+                    ? '/api/user/profile/' + user.id
+                    : '/assets/profile.png'
+                "
+                imgStyle="width: 50px; border-radius: 5px;"
+              ></app-image>
+              <div class="user-name">{{ user?.name }}</div>
+            </div>
+          </div>
+        </li>
       </div>
     </div>
 
