--- a/client/src/app/nav-header/nav-header.component.html
+++ b/client/src/app/nav-header/nav-header.component.html
@@ -92,7 +92,7 @@
           class="form-control"
           id="family"
           name="family"
-          [disabled]="disableFamily()"
+          [disabled]="!canChangeFamily"
           [(ngModel)]="family"
           autocomplete="off"
           [ngbTypeahead]="searchFamilies"
