we now have family memebers

--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -420,5 +420,11 @@
     </a>
   </div>
   <app-scoreboard></app-scoreboard>
+  <div>
+    Family Members
+    <div *ngFor="let name of familyMembers">
+      {{ name }}
+    </div>
+  </div>
 </ng-template>
 <footer></footer>
