--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -100,7 +100,7 @@
             id="family"
             name="family"
             [(ngModel)]="family"
-            placeholder="Who did you bring with you?"
+            placeholder="What does group want to be called?"
             autocomplete="off"
             [ngbTypeahead]="searchFamilies"
           />
