Fixed images issue when unauthenticated.

--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -1,12 +1,12 @@
 <ngb-alert *ngIf="" type="warning" [dismissible]="false">
   <p>
-    It appears you are using an app browser (like Facebook or Instagram instead
-    of Chrome or Safari).
+    It appears you are using an app browser (like Facebook or Twitter instead of
+    Chrome or Safari).
   </p>
   <p>
     This is not recommended. Your user will be limited to this browser and you
-    will need to navigate to fantasygc.org from the Facebook app in order to
-    login again.
+    will need to navigate to fantasygc.org from the app browser (Facebook or
+    Twitter) in order to login again.
   </p>
   <p>
     Long press this link:
