Polyfill all the way back to IPhone 5.

--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<ngb-alert *ngIf="" type="warning" [dismissible]="false">
+<ngb-alert *ngIf="isAppBrowser" type="warning" [dismissible]="false">
   <p>
     It appears you are using an app browser (like Facebook or Twitter instead of
     Chrome or Safari).
