Added "Username already taken!" message to home page and change user modal.
wip #63

--- a/client/src/app/nav-header/nav-header.component.html
+++ b/client/src/app/nav-header/nav-header.component.html
@@ -105,6 +105,10 @@
           ></app-valid-text>
         </small>
       </div>
+
+      <ngb-alert *ngIf="getWarning()" type="warning" [dismissible]="false">
+        {{ warning || "no warning" }}
+      </ngb-alert>
     </form>
   </div>
   <div class="modal-footer">
